<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2015 MKLab.org (Koga Laboratory)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="aboutApp">About App</string>
    <string name="accelerometerButton">accelerometerButton</string>
    <string name="accelerometerTextView">Accelerometer</string>
    <string name="addBox">+box</string>
    <string name="addCapsule">+capsule</string>
    <string name="addCone">+cone</string>
    <string name="addCylinder">+cylinder</string>
    <string name="addGroup">+group</string>
    <string name="addQuadrangle">+quadrangle</string>
    <string name="addSphere">+sphere</string>
    <string name="addTriangle">+triangle</string>
    <string name="animationSpeedText">Speed Rate</string>
    <string name="animationParameter">Animation Parameters</string>
    <string name="app_name">Mikity3D</string>
    <string name="axisShowingButton">axisShowingkButton</string>
    <string name="axisShowingTextView">Axis Showing</string>
    <string name="back">Back</string>
    <string name="backgroundColor">Background color</string>
    <string name="box">Box</string>
    <string name="capsule">Capsule</string>
    <string name="close">Close</string>
    <string name="color">Color</string>
    <string name="color_alpha">Color(Alapha)</string>
    <string name="color_r">Color(R)</string>
    <string name="color_g">Color(G)</string>
    <string name="color_b">Color(B)</string>
    <string name="composition">Composition</string>
    <string name="cone">Cone</string>
    <string name="coordinateParameter">Coordinate Parameters</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="cylinder">Cylinder</string>
    <string name="delete">Delete</string>
    <string name="delete_all_objects_in_the_group_q">Delete all objects in the group ?</string>
    <string name="depth">depth</string>
    <string name="division">division</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="edit">Edit</string>
    <string name="eyePosition">Eye position</string>
    <string name="fileName">...</string>
    <string name="floorDrawingTextView">Floor Drawing</string>
    <string name="gridShowingButton">gridShowingkButton</string>
    <string name="gridShowingTextView">Grid Showing</string>
    <string name="group">group</string>
    <string name="groupName">Group Name</string>
    <string name="height">height</string>
    <string name="help">Help</string>
    <string name="id">ID</string>
    <string name="lightPosition">Light position</string>
    <string name="loadedSuccessfully">Your data was loaded successfully</string>
    <string name="lookAtPoint">Look at point</string>
    <string name="minusButton">&lt;&lt;</string>
    <string name="model">Model</string>
    <string name="modelDataIsNotReady">Model data is not ready</string>
    <string name="modelIsChanged">Model data is changed.</string>
    <string name="name">Name</string>
    <string name="newModel">New</string>
    <string name="no">No</string>
    <string name="now_loading">Now Loading...</string>
    <string name="now_saving">Now Saving...</string>
    <string name="number">Number</string>
    <string name="objectType">Object Type</string>
    <string name="open">Open File...</string>
    <string name="parameterName">...</string>
    <string name="parameterUnit"></string>
    <string name="parameterValue"></string>
    <string name="paste">Pasete</string>
    <string name="pause">Pause</string>
    <string name="please_input_numerical_values">Please input numerical values.</string>
    <string name="please_select_source_file">Please select source file.</string>
    <string name="please_select_model_file">Please select model file.</string>
    <string name="plusButton">>></string>
    <string name="play">Play</string>
    <string name="preserve_ratio">Preserve ratio</string>
    <string name="quadrangle">Quadrangle</string>
    <string name="radius">radius</string>
    <string name="repeat">Repeat</string>
    <string name="resetToInitialState">Reset to Initial State</string>
    <string name="rotationSensorTextView">Rotation Sensor</string>
    <string name="rotationSensorButton">rotationSensorButton</string>
    <string name="rotation_wrt_x_axis">Rotation w.r.t. x-axis</string>
    <string name="rotation_wrt_y_axis">Rotation w.r.t. y-axis</string>
    <string name="rotation_wrt_z_axis">Rotation w.r.t. z-axis</string>
    <string name="rotationLockTextView">Rotation Lock</string>
    <string name="rotationLockButton">rotationLockButton</string>
    <string name="sample">Sample</string>
    <string name="sampleModel">Sample Model</string>
    <string name="save">Save</string>
    <string name="saveAs">Save As...</string>
    <string name="savedSuccessfully">Your data was saved successfully</string>
    <string name="shadowDrawingTextView">Shadow Drawing</string>
    <string name="selectModel">Select Model</string>
    <string name="settings">Settings</string>
    <string name="size_of_facets">Size of facets</string>
    <string name="source">Source</string>
    <string name="sourceDataIsNotReady">Source data is not ready</string>
    <string name="sourceReloadButton">↻</string>
    <string name="sphere">Sphere</string>
    <string name="stop">Stop</string>
    <string name="transform">Transform</string>
    <string name="translation_to_x_axis">Translation to x-axis</string>
    <string name="translation_to_y_axis">Translation to y-axis</string>
    <string name="translation_to_z_axis">Translation to z-axis</string>
    <string name="triangle">Triangle</string>
    <string name="value">Value</string>
    <string name="vertex_1_x">Vertex 1 (X)</string>
    <string name="vertex_1_y">Vertex 1 (Y)</string>
    <string name="vertex_1_z">Vertex 1 (Z)</string>
    <string name="vertex_2_x">Vertex 2 (X)</string>
    <string name="vertex_2_y">Vertex 2 (Y)</string>
    <string name="vertex_2_z">Vertex 2 (Z)</string>
    <string name="vertex_3_x">Vertex 3 (X)</string>
    <string name="vertex_3_y">Vertex 3 (Y)</string>
    <string name="vertex_3_z">Vertex 3 (Z)</string>
    <string name="vertex_4_x">Vertex 4 (X)</string>
    <string name="vertex_4_y">Vertex 4 (Y)</string>
    <string name="vertex_4_z">Vertex 4 (Z)</string>
    <string name="width">width</string>
    <string name="willYouSave">Save ?</string>
    <string name="yes">Yes</string>

</resources>