<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2015 MKLab.org (Koga Laboratory)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_play"
        android:icon="@drawable/play2"
        app:showAsAction="ifRoom"
        android:title="@string/play"/>
    <item
        android:id="@+id/menu_stop"
        android:icon="@drawable/stop2"
        app:showAsAction="ifRoom"
        android:title="@string/stop"/>
    <item
        android:id="@+id/menu_pause"
        android:icon="@drawable/pause2"
        app:showAsAction="ifRoom"
        android:title="@string/pause"/>
    <item
        android:id="@+id/menu_repeat"
        android:icon="@drawable/repeat2"
        app:showAsAction="ifRoom"
        android:title="@string/repeat"/>
    <item
        android:id="@+id/menu_reset_to_initial_state"
        android:icon="@drawable/reset3"
        app:showAsAction="ifRoom"
        android:title="@string/resetToInitialState"/>

</menu>